--- a/verkefni_3/index.html
+++ b/verkefni_3/index.html
@@ -8,7 +8,7 @@
 <strong><h1>Skipulag vefsíðu með grid</h1></strong>
 </div>
 <div class = a6>
-<p><a href="verkefni3.html">Forsíða</a> <a href="verkefni3.2.html">síða 2</a> <a href="verkefni3.3.html">síða 3</a></p>
+<p><a href="index.html">Forsíða</a> <a href="verkefni3.2.html">síða 2</a> <a href="verkefni3.3.html">síða 3</a></p>
 </div>
 <div class = a1>
    <strong>litafræði</strong>
